# assistente_vannaai

./: .gitignore  404.html  README.md  README.vanna-ui.md  app.py  bootstrap_db.sh  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  setup_pgvector_local.sql
.github/workflows/: docs.yml
api/: index.html
app/: config.py  db.py  guardrails.py  main.py  main_safe.py  playground_mount.py  schemas.py  vanna_integration.py
app/guardrails/: sql_guard.py
app/routers/: chat.py  nlq.py  status.py
app/routes/: vanna_chat.py
app/services/: nlq_vanna.py  vanna_client.py
app/ui/: chat_router.py  router.py
app/ui/templates/: chat.html  treinamento.html
arquitetura/: index.html
dados/esquema/: index.html
docs/: architecture.md  index.md  intents.md  nlq_flow.md  roadmap.md  troubleshooting.md
docs/api/: index.md
docs/arquitetura/: index.md
docs/dados/: esquema.md
docs/deploy/: docker.md
docs/integracoes/: vanna.md
docs/operacao/: observabilidade.md
docs/seguranca/: guardrails.md  perfis.md
docs/setup/: index.md
docs/ui/: treinamento.md
infra/: docker-compose.yml
integracoes/vanna/: index.html
search/: search_index.json
seguranca/perfis/: index.html
site/deploy/docker/: index.html
site/operacao/observabilidade/: index.html
site/roadmap/: index.html
site/seguranca/guardrails/: index.html
site/setup/: index.html
site/troubleshooting/: index.html
sql/: enable_pgvector.sql  grant_assistente_read.sql  grant_vector_in_public.sql  init.sql  move_vector_to_vanna.sql
tests/: conftest.py  test_intents.py
(+2 files in other folders)
