[project]
name = "vannaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "psycopg[binary]",
  "pydantic>=2",
  "python-dotenv",
  "vanna[ollama,pgvector,postgres]",
  "langchain-core>=0.2",
  "langchain-text-splitters>=0.2",
  "langchain-postgres>=0.0.15",
  "ollama>=0.5.3",
  "langchain-huggingface>=0.3.1",
  "sentence-transformers>=2.5,<3",
  "torch>=2.8.0",
  "mkdocs>=1.6.1",
  "ghp-import>=2.1.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "flask>=3.1.2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "anyio",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-mermaid2-plugin>=1.2.2",
]
